# TopNtupleAnalysis

./: ._test.py  .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Dockerfile  EventCount.root  LinkDef.h  Makefile  README  README.md  TODO  addCat.sh  addTt.sh  foo.xml  makehists_extra.sh  makeplots.sh  makeratio.sh  test.py
Root/: AnaMultijetAllIn1.cxx  AnaTtresMM.cxx  AnaTtresQCD.cxx  AnaTtresSB.cxx  AnaTtresSL.cxx  AnaTtresSLMtt.cxx  AnaTtresWJ.cxx  AnaTuDoSL.cxx  AnaTuDoTtresBoosted.cxx  AnaTuDoTtresResolved.cxx  Analysis.cxx  DMweight.C  DMweight.cxx  EFTLib.cxx  Electron.cxx  Event.cxx  HelAmps_TopEffTh.cxx  HelAmps_sm.cxx  HistogramService.cxx  Jet.cxx  LargeJet.cxx  LinkDef.h  MMUtils.cxx  MiniTree.cxx  Muon.cxx  Parameters_TopEffTh.cxx  Parameters_sm.cxx  TopEFTWeight.cxx  TtresChi2.cxx  TtresNeutrinoBuilder.cxx  WeakCorrScaleFactorParam.cxx  read_slha.cxx  wrapper.cxx
TopNtupleAnalysis/: AnaMultijetAllIn1.h  AnaTtresMM.h  AnaTtresQCD.h  AnaTtresSB.h  AnaTtresSL.h  AnaTtresSLMtt.h  AnaTtresWJ.h  AnaTuDoSL.h  AnaTuDoTtresBoosted.h  AnaTuDoTtresResolved.h  Analysis.h  EFTLib.h  Electron.h  Event.h  HelAmps_TopEffTh.h  HelAmps_sm.h  HistogramService.h  Jet.h  LargeJet.h  MMUtils.h  MiniTree.h  Muon.h  Parameters_TopEffTh.h  Parameters_sm.h  ScaleFactor.h  TopEFTWeight.h  TtresChi2.h  WeakCorrScaleFactorParam.h  read_slha.h  wrapper.h
TopNtupleAnalysis/EFTIncludes/P1_Sigma_TopEffTh_ccx_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_TopEffTh_ddx_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_TopEffTh_gg_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_TopEffTh_ssx_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_TopEffTh_uux_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_sm_gg_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P1_Sigma_sm_uux_ttx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_TopEffTh_ccx_ttxg/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_TopEffTh_ddx_ttxg/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_TopEffTh_gc_ttxc/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_TopEffTh_gcx_ttxcx/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_TopEffTh_gd_ttxd/: CPPProcess.cc
TopNtupleAnalysis/EFTIncludes/P2_Sigma_sm_gg_ttxg/: CPPProcess.cc
cmt/: Makefile.RootCore
limits/binned/: PostfitPlots.py  Smoothit2.C  config.txt  config_limit_nosmooth.txt  eftLimit.py  forBH.py  hackAntiCorrRad.py  hackExtrap.py  hackQCD15ifb.py  hackQCDStat.py  hackRes.py  hackWAsym.py  inject.py  injectStep.py  inputs.py  makeConfigs.py  makeConfigsExpLim.py  makeConfigsUnblind.py  makeRankingPlot.py  makeSig.py  make_spectrum.py  massLimit.py  massLimitCompare.py  pValue.py  ttres.config  ttres_aux.config  ttres_binning.config  ttres_boottnorm.config  ttres_boottnorm_cat1.config  ttres_boottnorm_cat2.config  ttres_boottnorm_cat3.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_asimov.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_cat1.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_cat2.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_cat3.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_e.config  ttres_boottnorm_smooth2nnlottpspp8mbinsqcdfixzero2_dectau32_topptnnlo_ewksmooth.config  (+30 more)
limits/unbinned/: Makefile  config_signal.txt  doall.sh
plotting/: Hist.cxx  Hist.h  Makefile  ParseUtils.cxx  ParseUtils.h  SampleSet.cxx  SampleSet.h  SystematicCalculation.cxx  SystematicCalculation.h  SystematicImplementation.cxx  SystematicImplementation.h  compare  compare.cxx  config.txt  config_limit.txt  config_limit_nosmooth.txt  config_nosyst.txt  config_sig.txt  config_syst.txt  plot  plot.cxx  plotChannelRatio  plotChannelRatio.cxx  plotCompareNominal  plotCompareNominal.cxx  utils.cxx  utils.h
plotting/share/: config_0lep.txt
pyHistograms/: DMweight.C  analysis.py  config.txt  config_limit.txt  config_limit_nosmooth.txt  findHFSFSimple.py  findHFSFSimple2.py  helpers.py  makeHistograms.py  makeInputsList.py  makeInputsListLocal.py  makehists_extra.sh  makeplots.sh  run.py  runBatch.py  runBatchDesy.py  runBatchLPC.py  runBatchLocal.py  runWjets.py  sumOfWeights_new.txt  sumOfWeightspdf_new.txt  sumOfWeightssystaf2_new.txt  sumOfWeightswjpdf_new.txt  sumWeights.py  test.sh  testBins.py  wjets.py  wrapper.C
pyHistograms/2HDM/: README  T2HDM.py  makeMatrix.py  testMatrix.py  ttjets_batch.py  ttjets_check.py  ttjets_lists.py  ttjets_merge.py  ttjets_plots.py  ttjets_sends.py  ttjets_slice.py  ttjets_split.py  ttjets_trees.py
python/: ._samples.py  analysis.py  clusters.py  helpers.py  makeHistograms.py  makeInputsListLocal.py  makehists_extra.sh  observables.py  reweighting.py  run.py  runBatchDesy.py  runBatchLocal.py  samples.py  selections.py  sumWeights.py  systematics.py  testBins.py  treetypes.py
python/2HDM/: README  ttjets_hists.py  ttjets_merge.py  ttjets_plots.py  ttjets_style.py
scripts/: AccEff.py  DC14MC13TeV.py  XSection-MC15-13TeV-ttres.data  XSection-MC15-13TeV.data  XSectionFromAmi-13TeV.txt  addBatch.py  addFiles.py  ami.py  makeTreeForOverlapCheck.sh  makeTreeForOverlapCheck_tool.C  makeXsecList.py  plotAcc.py  plotRes.py  plotSigMtt.py  plotWjetsFraction.py  plotZprimeDr.py  run.py  runBatch.py  runBatchPDF.py  runBatchSyst.py  runSimpleBatch.py  runSyst.py  tna-run  tna-run-condor.py  yieldsFromAmi.py
scripts/QCDestimation/: altQCDEstimation.py  doEffPlots.py  doQCDstudies.py  eff_ttbar.root  fake.root  fakeRates_2jets_Btag.root  fakeRates_2jets_noBtag.root  fake_1FJpt200.root  realRates_2jets_Btag.root  realRates_2jets_noBtag.root
share/: MC15c-SherpaWZ.data  sumOfWeights_R21.txt  sumOfWeights_new.txt  sumOfWeightssyst_new.txt  sumOfWeightssystaf2_new.txt  sumOfWeightswjpdf_new.txt
util/: read.cxx
(+178 files in other folders)
